--- a/500WATTiOS/500WATT.iOS.csproj
+++ b/500WATTiOS/500WATT.iOS.csproj
@@ -43,7 +43,7 @@
     <AssemblyName>Nitro</AssemblyName>
     <MtouchLink>SdkOnly</MtouchLink>
     <MtouchFloat32>true</MtouchFloat32>
-    <CodesignProvision>7f8a1251-cd3f-4088-9fe5-47cb5f39a8b5</CodesignProvision>
+    <CodesignProvision>500WATT-pro</CodesignProvision>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|iPhoneSimulator' ">
     <Optimize>true</Optimize>
