fix duplicated today done events in event calendar screen for both iOS and Android

--- a/500WATTiOS/500WATT.iOS.csproj
+++ b/500WATTiOS/500WATT.iOS.csproj
@@ -43,7 +43,7 @@
     <AssemblyName>Nitro</AssemblyName>
     <MtouchLink>SdkOnly</MtouchLink>
     <MtouchFloat32>true</MtouchFloat32>
-    <CodesignProvision>500WATT-pro</CodesignProvision>
+    <CodesignProvision>Wild-pro</CodesignProvision>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|iPhoneSimulator' ">
     <Optimize>true</Optimize>
@@ -323,11 +323,6 @@
     <BundleResource Include="Resources\heart.png" />
     <BundleResource Include="Resources\ninja.png" />
     <BundleResource Include="Resources\pen.png" />
-    <BundleResource Include="Resources\icon.png" />
-    <BundleResource Include="Resources\Icon-72.png" />
-    <BundleResource Include="Resources\Icon-76.png" />
-    <BundleResource Include="Resources\Icon-76%402x.png" />
-    <BundleResource Include="Resources\Icon-72%402x.png" />
     <BundleResource Include="Resources\Default.png" />
     <BundleResource Include="Resources\Default%402x.png" />
     <BundleResource Include="Resources\Default-568h%402x.png" />
@@ -474,9 +469,6 @@
     <Folder Include="Helper\" />
   </ItemGroup>
   <ItemGroup>
-    <ITunesArtwork Include="Resources\Icon.png" />
-  </ItemGroup>
-  <ItemGroup>
     <XamarinComponentReference Include="btprogresshud">
       <Version>1.20</Version>
       <Visible>False</Visible>
@@ -510,6 +502,9 @@
       <RelPath>Web References\trackSvc</RelPath>
       <UpdateFromURL>http://go-heja.com/Service1.svc</UpdateFromURL>
     </WebReferenceUrl>
+  </ItemGroup>
+  <ItemGroup>
+    <ITunesArtwork Include="iTunesArtwork" />
   </ItemGroup>
   <Import Project="..\packages\Microsoft.Bcl.Build.1.0.21\build\Microsoft.Bcl.Build.targets" Condition="Exists('..\packages\Microsoft.Bcl.Build.1.0.21\build\Microsoft.Bcl.Build.targets')" />
   <Import Project="..\packages\Xamarin.Build.Download.0.4.4\build\Xamarin.Build.Download.targets" Condition="Exists('..\packages\Xamarin.Build.Download.0.4.4\build\Xamarin.Build.Download.targets')" />
